# scalgrad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.py  nn.hpp
example/: CMakeLists.txt  Makefile  cmake_install.cmake
example/src/: main.cc
include/: engine.hpp  nn.hpp
nanograd/: engine.py  nn.py
nanograd-cpp/: engine.hpp  gout.dot  main.cc
test/: CMakeLists.txt
test/src/: test-engine.cc
